# python-project-50

./: .coverage  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: pyci.yml
gendiff/: __init__.py  cli.py  converter.py  difference.py  help.py  parser.py  parsing.py  stylish.py
gendiff/formaters/: __init__.py  formater_json.py  formater_plain.py  formater_stylish.py
gendiff/scripts/: gendiff.py
tests/: test_formaters.py  test_gendiff_init.py  test_generate_diff.py
tests/fixtures/: result_json_format.json
